More content changes on hc3

--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-recalculated.html
@@ -141,24 +141,17 @@ We found an HC3 certificate and have recalculated your penalty charge - Confirm 
               Confirm I was entitled to free NHS dental treatment
             </label>
             <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-2-item-hint">
-              If you were pregnant or getting benefits at the time you claimed, you may have been entitled to free NHS dental treatment.
+              You may have been entitled to free NHS dental treatment if, at the time you claimed, you were either:
+              <ul>
+                <li>pregnant, or had given birth in the previous 12 months</li>
+                <li>getting benefits</li>
+              </ul>
             </div>
           </div>
         </div>
 
       </fieldset>
     </div>
-
-    <details class="nhsuk-details">
-      <summary class="nhsuk-details__summary">
-        <span class="nhsuk-details__summary-text">
-          I was not entitled to free NHS dental treatment but have an exceptional reason why I made the claim
-        </span>
-      </summary>
-      <div class="nhsuk-details__text">
-        <p>If you were not entitled to free NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. <a href="/v6-pcn-decs/who-can-ask-for-review">Find out if you can ask for a review</a>.</p>    
-      </div>
-    </details>
 
    <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
       Continue
