--- a/app/views/v6-pcn-decs/we-found-a-hc3-cert-same-pcn.html
+++ b/app/views/v6-pcn-decs/we-found-a-hc3-cert-same-pcn.html
@@ -139,10 +139,14 @@ We found a Hc3 cert with same contribution
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="example-hints-2" name="example-hints" type="radio" value="verify" aria-describedby="example-hints-2-item-hint">
             <label class="nhsuk-label nhsuk-radios__label" for="example-hints-2">
-              Confirm my entitlement
+              Confirm I was entitled to free NHS dental treatment
             </label>
             <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-2-item-hint">
-              If you were pregnant or getting benefits at the time you claimed, you can continue your challenge. You may have been entitled to free dental treatment.
+              You may have been entitled to free NHS dental treatment if, at the time you claimed, you were either:
+              <ul>
+                <li>pregnant, or had given birth in the previous 12 months</li>
+                <li>getting benefits</li>
+              </ul>
             </div>
           </div>
     
