--- a/app/views/v6-pcn/gov-pay-apple-pay.html
+++ b/app/views/v6-pcn/gov-pay-apple-pay.html
@@ -5,6 +5,155 @@ GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
+
+<style>
+	/* Modal styles */
+	.modal {
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+		background-color: rgb(0,0,0); /* Fallback color */
+		background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	}
+	.modal-content {
+		background-color: #e7e2e0;
+		margin: 5% auto; /* 15% from the top and centered */
+		border: 2px solid #888;
+		border-radius: 16px;
+		width: 80%; /* Could be more or less, depending on screen size */
+		max-width: 600px;
+	}
+
+	.modal-content-top {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		padding: 20px;
+	}
+
+	.close {
+		color: #000;
+		float: right;
+		font-size: 14px;
+		font-weight: 600;
+		border: 0px;
+		background-color: #cec8c8;
+		padding: 4px 10px;
+		border-radius: 6px;
+	}
+	.close:hover,
+	.close:focus {
+		color: black;
+		text-decoration: none;
+		cursor: pointer;
+	}
+
+	.apple-pay-modal-title {
+		font-weight: 600;
+		font-size: 28px;
+		margin-bottom: 0px;
+		width: 100%;
+	}
+
+	.apple-pay-modal-card {
+		max-width: 100%;
+		padding: 15px;
+		border-radius: 16px;
+		background-color: #fff;
+		display: flex;
+		flex-direction: row;
+		margin: 0px 20px 15px 20px;
+	}
+
+	.apple-pay-modal-card-primary-text {
+		font-size: 16px;
+		margin-bottom: 0px;
+		color: black;
+    	line-height: 1.2;
+	}
+
+	.apple-pay-modal-card-secondary-text {
+		font-size: 14px;
+		margin-bottom: 0px;
+		color: #666;
+	}
+
+	.apple-pay-modal-contact-primary-text {
+		font-size: 14px;
+		margin-bottom: 0px;
+		color: #666;
+    	line-height: 1.2;
+	}
+
+	.apple-pay-modal-contact-secondary-text {
+		font-size: 16px;
+		margin-bottom: 0px;
+		color: black;
+	}
+
+	.apple-pay-modal-card-image {
+		width: 40px;
+		height: 28px;
+		margin-right: 15px;
+	}
+
+	.apple-pay-modal-contact-image {
+		width: 40px;
+		height: 40px;
+		margin-right: 15px;
+	}
+
+	.apple-pay-modal-cost {
+		padding: 0px 20px;
+	}
+
+	.apple-pay-modal-item-name {
+		font-size: 14px;
+		color: #333;
+		margin-bottom: 0px;
+		line-height: 1.2;
+		margin-top: 25px;
+	}
+
+	.apple-pay-modal-price {
+		font-size: 28px;
+		font-weight: 600;
+		color: black;
+	}
+
+	.apple-pay-modal-bottom {
+		border-top: 2px solid #d3cac6;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.apple-pay-modal-bottom p {
+		font-size: 16px;
+		line-height: 1.2;
+		color: #000;
+		margin-bottom: 20px;
+	}
+
+	.apple-pay-modal-bottom img {
+		margin: 20px 0px 0px 0px;
+		width: 50px;
+		height: 50px;
+	}
+
+	.apple-pay-modal-bottom a:focus {
+		background-color: transparent;
+		box-shadow: none;
+		color: transparent;
+		outline: 0px;
+		text-decoration: none;
+	}
+</style>
  
 
 <main id="content" role="main">
@@ -27,7 +176,7 @@ GOV.UK prototype kit
 
         		<h3 class="govuk-heading-m">Pay with Apple Pay</h3>
 
-				<a href="#" class="apple-pay-button nhsuk-u-margin-bottom-4">
+				<a href="#" class="apple-pay-button nhsuk-u-margin-bottom-4" id="payBtn">
 					 Pay
 				</a>
 
@@ -438,5 +587,75 @@ GOV.UK prototype kit
     	</div>
   	</div>
 </main>
+
+<!-- The Modal -->
+<div id="appleModal" class="modal">
+	<!-- Modal content -->
+	<div class="modal-content">
+		<div class="modal-content-top">
+			<p class="apple-pay-modal-title"> Pay</p>
+			<button class="close">Cancel</button>
+		</div>
+
+		<div class="apple-pay-modal-card">
+			<img src="/images/natwest-card.png" class="apple-pay-modal-card-image">
+			<div>
+				<p class="apple-pay-modal-card-primary-text">Natwest Visa Debit Card (... 1727)</p>
+				<p class="apple-pay-modal-card-secondary-text">22 Sanderstead Rd Plymouth PL6 5US Unite...</p>
+			</div>
+		</div>
+
+		<div class="apple-pay-modal-card">
+			<img src="/images/contact-icon.png" class="apple-pay-modal-contact-image">
+			<div>
+				<p class="apple-pay-modal-contact-primary-text">Contact</p>
+				<p class="apple-pay-modal-contact-secondary-text">
+					samjones@icloud.com<br>
+					07156 272556
+				</p>
+			</div>
+		</div>
+
+		<div class="apple-pay-modal-cost">
+			<p class="apple-pay-modal-item-name">Penalty charge notice</p>
+			<p class="apple-pay-modal-price">£50.00</p>
+		</div>
+
+		<div class="apple-pay-modal-bottom">
+			<a href="full-payment-made">
+				<img src="/images/apple-touch-icon.png" alt="apple touch icon">
+			</a>
+			<p>Pay with Touch ID</p>
+		</div>
+	</div>
+</div>
+
+<script>
+    // Get the modal
+    var modal = document.getElementById("appleModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("payBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+</script>
 
 {% endblock %}
