Experimental pages added / fixed links

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -923,7 +923,7 @@ NHS.UK prototype kit
                     </tbody>
                 </table>
 
-                <h3>Gov Pay - Apple Pay and Google Pay page examaples</h3>
+                <h3>Gov Pay - Apple Pay and Google Pay page examples</h3>
 
                 <table class="nhsuk-table">
                     <thead role="rowgroup" class="nhsuk-table__head">
@@ -960,6 +960,49 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag">
                                     BOTH
+                                </strong>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3>Experimental</h3>
+
+                <table class="nhsuk-table">
+                    <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                            <th role="columnheader" class="" scope="col">
+                                Page title
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                URL
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                PECS/DECS
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="nhsuk-table__body">
+ 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Surcharge penalty charge notice (Experimental)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/surcharge-pcn-experimental">Surcharge penalty charge notice (Experimental)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">
+                                    PECS
+                                </strong>
+                            </td>
+                        </tr>
+                        
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Surcharge penalty charge notice HC3 (Experimental)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/surcharge-pcn-hc3-experimental">Surcharge penalty charge notice HC3 (Experimental)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
                                 </strong>
                             </td>
                         </tr>
