Removal of duplicate total to pay experimental screens

--- a/app/views/v6-pcn-decs/surcharge-pcn-hc3-experimental.html
+++ b/app/views/v6-pcn-decs/surcharge-pcn-hc3-experimental.html
@@ -124,14 +124,14 @@ Penalty Charge Notice details hc3
 						</dd>
 					</div>
 
-					<div class="nhsuk-summary-list__row">
+					<!-- <div class="nhsuk-summary-list__row">
 						<dt class="nhsuk-summary-list__key">
 							Total amount to pay
 						</dt>
 						<dd class="nhsuk-summary-list__value">
 							<strong>£173.50</strong>
 						</dd>
-					</div>
+					</div> -->
 				</dl>
 
 				<p style="font-weight: bold; font-size:36px;">
