--- a/app/views/v6-pcn/surcharge-pcn-experimental.html
+++ b/app/views/v6-pcn/surcharge-pcn-experimental.html
@@ -64,14 +64,14 @@
                         </dd>
                     </div>
 
-                    <div class="nhsuk-summary-list__row">
+                    <!-- <div class="nhsuk-summary-list__row">
                         <dt class="nhsuk-summary-list__key">
                             Total amount to pay
                         </dt>
                         <dd class="nhsuk-summary-list__value">
                             <strong>£480.00</strong>
                         </dd>
-                    </div>
+                    </div> -->
                 </dl>
       
 
