--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -1008,6 +1008,51 @@ NHS.UK prototype kit
                         </tr>
                     </tbody>
                 </table>
+
+                <h3>Future Iterations</h3>
+
+                <table class="nhsuk-table">
+                    <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                            <th role="columnheader" class="" scope="col">
+                                Page title
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                URL
+                            </th>
+                            <th role="columnheader" class="" scope="col">
+                                PECS/DECS
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="nhsuk-table__body">
+ 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Direct Debit check your answers (go back link)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/exprimental/dd-check-answers-go-back-link">Direct Debit check your answers (go back link)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+                        
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Unable to set up Direct Debit (redirect to payment method)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/exprimental/unable-to-set-up-dd-redirect">Unable to set up Direct Debit (redirect to payment method)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag">
+                                    BOTH
+                                </strong>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </details>
 
