Your case will be closed screen added

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -555,22 +555,28 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">1st and 2nd attempt - cannot match details</td>
-                        <td class="nhsuk-table__cell"><a href="v5-enquiry/we-need-proof">We cannot find your details</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">1st and 2nd attempt - cannot match details</td>
+                            <td class="nhsuk-table__cell"><a href="v5-enquiry/we-need-proof">We cannot find your details</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">What is the best way for us to contact you</td>
-                        <td class="nhsuk-table__cell"><a href="v5-enquiry/best-way-to-contact">We will review. how can we contact
-                            you?</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">What is the best way for us to contact you</td>
+                            <td class="nhsuk-table__cell"><a href="v5-enquiry/best-way-to-contact">We will review. how can we contact
+                                you?</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                        <td class="nhsuk-table__cell">Case closed - Deceased</td>
-                        <td class="nhsuk-table__cell"><a href="v5-enquiry/deceased">The case has been closed</a></td>
-                        <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                            <td class="nhsuk-table__cell">Case will be closed - refund</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/case-will-be-closed">Your case will be closed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Case closed - Deceased</td>
+                            <td class="nhsuk-table__cell"><a href="v5-enquiry/deceased">The case has been closed</a></td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
@@ -1031,7 +1037,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Direct Debit check your answers (go back link)</td>
                             <td class="nhsuk-table__cell">
-                                <a href="v6-pcn/exprimental/dd-check-answers-go-back-link">Direct Debit check your answers (go back link)</a>
+                                <a href="v6-pcn/experimental/dd-check-answers-go-back-link">Direct Debit check your answers (go back link)</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag">
@@ -1043,7 +1049,7 @@ NHS.UK prototype kit
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Unable to set up Direct Debit (redirect to payment method)</td>
                             <td class="nhsuk-table__cell">
-                                <a href="v6-pcn/exprimental/unable-to-set-up-dd-redirect">Unable to set up Direct Debit (redirect to payment method)</a>
+                                <a href="v6-pcn/experimental/unable-to-set-up-dd-redirect">Unable to set up Direct Debit (redirect to payment method)</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag">
