Various views / routes fixes

--- a/app/views/v6-pcn-decs/confirm-direct-debit.html
+++ b/app/views/v6-pcn-decs/confirm-direct-debit.html
@@ -122,9 +122,9 @@ Confirm and submit your Direct Debit
       ​<div class="nhsuk-card">
         <div class="nhsuk-card__content">
 
-          <img
-            src="https://www.guhg.co.uk/wp-content/uploads/2018/11/direct-debit-website-992x561-e1542983967438-1140x720.png"
-            width="150px" alt="Picture of DD logo" style="display:block; margin-bottom: 10px;">
+            
+            <img src="/images/dd-logo.png" width="150px" alt="Direct Debit logo" style="display:block; margin-bottom: 30px;"/>
+
 
           <p>We will send this Direct Debit instruction to: <strong>HSBC BANK PLC, Guernsey, Channel Islands</strong>.
           </p>
