--- a/app/views/v6-pcn/direct-debit-instalment-option.html
+++ b/app/views/v6-pcn/direct-debit-instalment-option.html
@@ -13,72 +13,65 @@ Select how many months you want to pay over
 {% block content %}
 
 <div class="nhsuk-back-link">
-<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-  <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-    <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-  </svg>
-  Go back</a>
+	<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+	<svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+		<path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+	</svg>
+	Go back</a>
 </div>
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+<div class="nhsuk-grid-row">
+	<div class="nhsuk-grid-column-two-thirds">
+		<span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
+		<h1 class="nhsuk-heading-l">Select how many months you want to pay over</h1>
 
-      <form action="direct-debit-date" method="post" class="form">
+		<p>Your total amount to pay is £123.80. You will not be charged interest on this amount and it will not affect your credit score.</p>
+		<p>Select how many months you want to pay over</p>
 
-        <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-l">Select how many months you want to pay over</h1>
-        <div class="nhsuk-form-group">
-          <p>Your total amount to pay is £123.80. You will not be charged interest on this amount and it will not affect your credit score.</p>
-          <p>Select how many months you want to pay over</p>
+		<form action="/v6-pcn/direct-debit-instalment-option" method="post" class="form">
+			<div class="nhsuk-form-group">
+				<div class="nhsuk-radios">
+					<div class="nhsuk-radios__item">
+						<input class="nhsuk-radios__input" id="instalment-options-1" name="months" type="radio" value="3" aria-describedby="instalment-options-1-item-hint">
+						<label class="nhsuk-label nhsuk-radios__label" for="instalment-options-1">
+							3 months
+						</label>
+						<div class="nhsuk-hint nhsuk-radios__hint" id="instalment-options-1-item-hint">
+							1 payment of £41.28 followed by 2 payments of £41.26
+						</div>
+					</div>
 
-<div class="nhsuk-form-group">
-  <div class="nhsuk-radios">
+					<div class="nhsuk-radios__item">
+						<input class="nhsuk-radios__input" id="instalment-options-2" name="months" type="radio" value="6" aria-describedby="instalment-options-2-item-hint">
+						<label class="nhsuk-label nhsuk-radios__label" for="instalment-options-2">
+							6 months
+						</label>
+						<div class="nhsuk-hint nhsuk-radios__hint" id="instalment-options-2-item-hint">
+							1 payment of £20.65 followed by 5 payments of £20.63
+						</div>
+					</div>
 
-    <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
-      <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-        3 months
-      </label>
-      <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
-        1 payment of £41.28 followed by 2 payments of £41.26
-      </div>
-    </div>
-    <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
-      <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-        6 months
-      </label>
-      <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
-        1 payment of £20.65 followed by 5 payments of £20.63
-      </div>
-    </div>
-    <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
-      <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-        12 months
-      </label>
-      <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
-        1 payment of £10.39 followed by 11 payments of £10.31
-      </div>
-    </div>
-       
-       </div>
-    </div>
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you cannot afford any of these monthly plans (link opens in new window).</a></p>
-            </fieldset>
-        
-        
-    <div class="nhsuk-form-group">
-     <button class="nhsuk-button" type="submit">
-      Continue
-     </button>
-     <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
-    </div>
+					<div class="nhsuk-radios__item">
+						<input class="nhsuk-radios__input" id="instalment-options-3" name="months" type="radio" value="12" aria-describedby="instalment-options-3-item-hint">
+						<label class="nhsuk-label nhsuk-radios__label" for="instalment-options-3">
+							12 months
+						</label>
+						<div class="nhsuk-hint nhsuk-radios__hint" id="instalment-options-3-item-hint">
+							1 payment of £10.39 followed by 11 payments of £10.31
+						</div>
+					</div>			
+				</div>
+			</div>
+			
+			<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you cannot afford any of these monthly plans (link opens in new window).</a></p>
+ 
+			<button class="nhsuk-button" type="submit">
+				Continue
+			</button>
 
-  </form>
-   
-
+			<p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
+		</form>
     </div>
-  </div>
+</div>
 
 {% endblock %}
